Improve measurement plugin integration

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
     }
 }
 
-def measurementPluginJar = project.hasProperty('measurementPluginJar') ? project.property('measurementPluginJar') : null
-if(measurementPluginJar) {
+def measurementPluginEnabled = project.hasProperty('measurementPluginJar')
+if(measurementPluginEnabled) {
     apply plugin: org.gradle.performance.plugin.MeasurementPlugin
 }
 
@@ -24,7 +24,7 @@ subprojects {
     }
 }
 
-if(measurementPluginJar) {
+if(measurementPluginEnabled) {
     org.gradle.performance.plugin.BuildEventTimeStamps.settingsEvaluated()
 }
 
