--- a/generator/gradle/wrapper/gradle-wrapper.properties
+++ b/generator/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.1-rc-1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-3.4-20170124101339+0000-bin.zip
