Replace JCenter with MavenCentral
Signed-off-by: Christoph Obexer <cobexer@gradle.com>

--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -7,7 +7,7 @@ plugins {
 mainClassName = 'org.gradle.generator.NativeLargeGenerator'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
